Add required compiler arguments to tycho build