@@ -68,5 +68,27 @@
 			<url>${knime.tp.p2}</url>
 		</repository>
 	</repositories>
-
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-compiler-plugin</artifactId>
+				<version>${tycho.version}</version>
+				<configuration>
+					<compilerArgs>
+						<arg>--add-exports</arg>
+						<arg>java.security.jgss/sun.security.jgss=ALL-UNNAMED</arg>
+						<arg>--add-exports</arg>
+						<arg>java.security.jgss/sun.security.jgss.spi=ALL-UNNAMED</arg>
+						<arg>--add-exports</arg>
+						<arg>java.security.jgss/sun.security.jgss.krb5=ALL-UNNAMED</arg>
+						<arg>--add-exports</arg>
+						<arg>java.security.jgss/sun.security.krb5.internal=ALL-UNNAMED</arg>
+						<arg>--add-exports</arg>
+						<arg>java.security.jgss/sun.security.krb5=ALL-UNNAMED</arg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
